Removed Maven pom and added Gradle build
verified tests and app works with Gradle setup

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,10 @@
 *.ipr
 
 ### Build Files ###
-/target/*
+build/
+dist/
+bin/
+out
 mvnw
 mvnw.cmd
 
@@ -28,3 +31,5 @@ mvnw.cmd
 /dist/
 /nbdist/
 /.nb-gradle/
+
+
