--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ apply plugin: 'groovy'
 apply plugin: 'org.springframework.boot'
 apply plugin: "io.spring.dependency-management"
 
-
+defaultTasks 'clean', 'build'
 
 repositories {
     jcenter()
@@ -60,6 +60,19 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version:'2.0.2.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-web-services'
     compile "org.springframework.boot:spring-boot-starter-actuator"
+
+    //Hibernate
+    implementation 'org.hibernate:hibernate-core:5.4.2.Final'
+    implementation 'org.hibernate:hibernate-entitymanager:5.4.2.Final'
+
+    //Redis Cache
+    //compile 'redis.clients:jedis:2.7.0'
+    //compile 'org.springframework.data:spring-data-redis:2.5.1'
+    compile 'org.springframework.data:spring-data-redis'
+    compile('org.springframework.boot:spring-boot-starter-data-redis') {
+        exclude group: 'io.lettuce', module: 'lettuce-core'
+    }
+    compile 'redis.clients:jedis'
 
     //Mapstruct Mapper
     compile 'org.mapstruct:mapstruct:1.4.2.Final'
