--- a/build.gradle
+++ b/build.gradle
@@ -6,22 +6,21 @@ description = """spring-postgres-api"""
 buildscript {
     ext {
         //Spring
-        springBootVersion = '2.0.2.RELEASE'
+        springBootVersion = '2.0.4.RELEASE'
 
+        //Spring Cloud
+        springCloudVersion = 'Edgware.SR5'
 
         //groovy
         groovyVersion = '2.4.12'
 
-
         // source and target Java version
         javaVersion = '1.8'
 
-
         //Mapper
         mapstructVersion = "1.3.0.Beta2"
-
-
     }
+
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url 'https://repo.spring.io/plugins-snapshot' }
@@ -30,6 +29,9 @@ buildscript {
     }
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+
+        //NEW NEW
+        classpath "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         classpath 'io.spring.gradle:dependency-management-plugin:<<snapshot-version>>'
         }
 
@@ -52,6 +54,12 @@ repositories {
 		}
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Finchley.RELEASE"
+    }
+}
+
 dependencies {
 
     //Springboot
@@ -65,9 +73,10 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:5.4.2.Final'
     implementation 'org.hibernate:hibernate-entitymanager:5.4.2.Final'
 
+    //Spring Cloud Netflix
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+
     //Redis Cache
-    //compile 'redis.clients:jedis:2.7.0'
-    //compile 'org.springframework.data:spring-data-redis:2.5.1'
     compile 'org.springframework.data:spring-data-redis'
     compile('org.springframework.boot:spring-boot-starter-data-redis') {
         exclude group: 'io.lettuce', module: 'lettuce-core'
@@ -75,8 +84,7 @@ dependencies {
     compile 'redis.clients:jedis'
 
     //Mapstruct Mapper
-    compile 'org.mapstruct:mapstruct:1.4.2.Final'
-    compile group: 'org.mapstruct', name: 'mapstruct', version:'1.3.0.Final'
+    compile group: 'org.mapstruct', name: 'mapstruct', version:'1.5.1.Final'
     implementation("org.mapstruct:mapstruct:${mapstructVersion}")
     compileOnly "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
