upgraded Jackson dependency and added health check details.
upgraded Jackson dependency and added health check details with updated app.properties file to have actuator emit health for database, redis cache, and hystrix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ info.build.version=@project.version@
 info.build.artifactId=@project.artifactId@
 spring.application.name=Spring Rest API with Postgres
 
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
+
 #when hosted on a server or in K8s these values would be secrets.Do I need a config map also, i don't think so because Spring will do it?
 #spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
