got  error handling working with controller advice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,35 @@
 info.build.version=@project.version@
 info.build.artifactId=@project.artifactId@
 spring.application.name=Spring Rest API with Postgres
-
 management.endpoint.health.show-details=always
 management.health.db.enabled=true
+#Exclude Redis from the Spring Health Check as the app can operate without it
+management.health.redis.enabled=false
 
 #when hosted on a server or in K8s these values would be secrets.Do I need a config map also, i don't think so because Spring will do it?
 #spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
 
-
+#spring datasource info
 spring.datasource.username=postgres
 spring.datasource.password=target
 spring.jpa.generate-ddl=true
 server.port = 8080
 
+#spring jpa debugging
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#springboot exception message settings
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+server.error.include-exception=false
+
+#defines the number of times a failure is acceptable before the circuit breaks
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+#hystrix.command.default.circuitBreaker.requestVolumeThreshold=1
+#hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=5000
+#hystrix.threadpool.default.coreSize=4
+#hystrix.threadpool.default.metrics.rollingStats.timeInMilliseconds=200000
