--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version:'2.0.2.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-web-services'
     compile "org.springframework.boot:spring-boot-starter-actuator"
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+
 
     //Hibernate
     implementation 'org.hibernate:hibernate-core:5.4.2.Final'
@@ -107,7 +109,7 @@ dependencies {
 
     //testing
     testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     testImplementation "org.codehaus.groovy:groovy-all:3.0.3"
     testCompile "org.springframework.boot:spring-boot-starter-test:2.1.6.RELEASE"
     testImplementation 'junit:junit:4.12'
